--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://lh3.googleusercontent.com/proxy/Q5xkvkTLPLbEO_4GxzeMMxd5thAHzSWM5AUPPH1P_798o9gTmW53H4VxAR1SYBd_kglUahf5HJRh9JD_9pVLeHPDZOR4KFSyHIvfvw8fzRqukNx-PJ2HIaLom3CZGLhozfZG2rWn02HfdpYnZtwQY3pT2bel-wwJQfBVKPNAv4bcAQSC4A0HWyApWmWsv0T_T_cyp3Ko3FMij8XOUqVjmU3pkqO6wHBGPgqJ-1I-Upl2BJ55Zh6gLkjYJtdDcCIaQX857LeiYFNEVEuru9N2h9IzJCzJ04iO7m1F3PSJPcd8TTDu1BDQOqJ3M7QiTulcZkCfP9xB_AlYQvN8sD6Vgw" alt="">
+    <img src="https://i.pinimg.com/originals/64/ed/8f/64ed8fdc3663e3949e999c507cde6550.jpg" alt="Colombian flag">
+    <img src="https://earthsky.org/upl/2019/08/andromeda-galaxy-9-18-10-Adam-Evans-Flickr-e1565883339297.jpg" alt="Andromeda galaxy" title="Andromeda galaxy">
   </body>
 </html>
